# coding: utf-8
[metadata]
name = aws-satella
version = 1.0a3
keywords = metrics, aws satella
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Piotr Maślanka
author_email = piotr.maslanka@henrietta.com.pl
description = Integration of Satella's metrics with AWS CloudWatch
url = https://github.com/piotrmaslanka/aws-satella
project-urls =
	Code = https://github.com/piotrmaslanka/aws-satella
	Issue tracker = https://github.com/piotrmaslanka/aws-satella/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[options]
install_requires =
    satella
    boto3
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:

[options.packages.find]
exclude =
    docs
    tests

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 0
